# Computer-graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
2D_Transformations/src/: main.py  task1.py  tasks_11_14.py  tasks_2_3.py  tasks_4_5.py  tasks_6_7_8.py  tasks_9_10.py
3D_Transformations/src/: euler_tasks_1_2_3.py  euler_tasks_4_5_6_7.py  main_animation.py  quaternion_tasks.py  tasks_10_11_12.py  tasks_13_15.py  tasks_1_2_3.py  tasks_4_5_6.py  tasks_7_8_9.py
3D_Transformations/src/engine/model/: Cube.py
3D_Transformations/src/engine/scene/: Scene.py
3D_Transformations/src/math/: Mat3x3.py  Rotations.py  utils_matrix.py
Textured_Rectangles/: task1.py  task2.py
